tests/rosetta/out/Smalltalk/bioinformatics-sequence-mutation.out
/workspace/mochi/tests/rosetta/out/Smalltalk/bioinformatics-sequence-mutation.st:19: invalid assignment to argument s
/workspace/mochi/tests/rosetta/out/Smalltalk/bioinformatics-sequence-mutation.st:29: invalid assignment to argument s
/workspace/mochi/tests/rosetta/out/Smalltalk/bioinformatics-sequence-mutation.st:132: parse error, expected '|' or identifier
